syntax = "proto3";

service Minion {
    rpc SetMinionConfig(MinionConfig) returns(Reply) {}
    rpc GetMinionConfig(Request) returns (MinionConfig) {}
    rpc SetContainerConfig(ContainerConfig) returns (Reply) {}
}

message MinionConfig {
    enum Role {
        NONE = 0;
        MASTER = 1;
        WORKER = 2;
    }

    string ID = 1;
    Role role = 2;
    string PrivateIP = 3;
    string EtcdToken = 4;
}

message ContainerConfig {
    string Name = 1;
    int32 Count = 2;
}

message Reply {
    bool Success = 1;
    string Error = 2;
}

message Request {
}
